# ticketer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
test/: ticket_1.json
ticketer/: CMakeLists.txt  core.cpp  core.h  iFixAndTicket.cpp  iFixAndTicket.h  mainwindow.cpp  mainwindow.h
